project(test_server)
cmake_minimum_required(VERSION 2.6)
message("project path: " ${PROJECT_SOURCE_DIR})
FILE(GLOB TEST_SRC *.c *.cpp *.h)
#set(CMAKE_BUILE_TYPE DEBUG)
#add_subdirectory(../src)
aux_source_directory(../src ACNET_SRC)
include_directories(ACNET_INCLUDE ../src)
add_definitions("-g -Wall")
set(CMAKE_C_COMPILER "g++")
add_executable(test_server ${TEST_SRC} ${ACNET_SRC})

